[project]
name = "workload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyterlab>=4.0",
    "locust>=2.20",
    "mistune>=3.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "plotly>=5.20",
    "pygments>=2.17",
    "pysocks>=1.7",
    "setuptools>=70",
    "xhtml2pdf>=0.2.11",
]
